--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,38 @@
   <head>
     <title>Naveen</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Overpass:wght@800&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap"
-      rel="stylesheet"
-    />
+
+    <style>
+      @font-face {
+        font-family: "rz-bold";
+        src: url("https://d33wubrfki0l68.cloudfront.net/f3186e7f4b56c63f574671af3000fd4bf8c51332/49de9/fonts/rezozero/rz-bold.eot");
+        src: url("https://d33wubrfki0l68.cloudfront.net/f3186e7f4b56c63f574671af3000fd4bf8c51332/49de9/fonts/rezozero/rz-bold.eot#iefix")
+            format("embedded-opentype"),
+          url("https://d33wubrfki0l68.cloudfront.net/6c20ef9ba5c8c01672467d91da6bd74522ebcf6c/ba54e/fonts/rezozero/rz-bold.woff2")
+            format("woff2"),
+          url("https://d33wubrfki0l68.cloudfront.net/a9ecebfc0a7c9a3fca8cfa77361749c23bf6f01f/c05e8/fonts/rezozero/rz-bold.woff")
+            format("woff"),
+          url("https://d33wubrfki0l68.cloudfront.net/f57fe473796f6ac89caa77ae02193fcadab8b994/07b4b/fonts/rezozero/rz-bold.svg")
+            format("svg");
+        font-style: normal;
+        font-weight: bold;
+      }
+
+      @font-face {
+        font-family: "rz-regular";
+        src: url("https://d33wubrfki0l68.cloudfront.net/a2a2e60773e19d6ee1cf922f7141a7b46d4d19cf/4264c/fonts/rezozero/rz-regular.eot");
+        src: url("https://d33wubrfki0l68.cloudfront.net/a2a2e60773e19d6ee1cf922f7141a7b46d4d19cf/4264c/fonts/rezozero/rz-regular.eot#iefix")
+            format("embedded-opentype"),
+          url("https://d33wubrfki0l68.cloudfront.net/42a1250d376805641ea1293a09d0f339d9138f7c/82579/fonts/rezozero/rz-regular.woff2")
+            format("woff2"),
+          url("https://d33wubrfki0l68.cloudfront.net/ced4ea2d52c6493542244e03056e72e24efa2020/de4df/fonts/rezozero/rz-regular.woff")
+            format("woff"),
+          url("https://d33wubrfki0l68.cloudfront.net/a86136c3aae1eca151ace3442768510c960ced28/7e4b7/fonts/rezozero/rz-regular.svg")
+            format("svg");
+        font-style: normal;
+        font-weight: normal;
+      }
+    </style>
   </head>
   <body>
     <header class="header">
@@ -348,8 +372,11 @@
           <div class="text-appear__line-bottom js-line-bottom"></div>
         </div>
 
-        <div class="skills-wrapper">
+        <div class="skills-wrapper js-skills-wrapper">
           <div class="skills js-skills-slider">
+            <div class="back-btn js-skills-back-btn">
+              <img src="images/close.svg" alt="close button" />
+            </div>
             <div class="skills__box skills__box">
               <div class="skills__skill-icons js-skill-icons">
                 <img
@@ -373,7 +400,7 @@
                   alt="web"
                 />
               </div>
-              <div class="skills__skill-desc">
+              <div class="skills__skill-desc js-skill-desc">
                 <div class="skills__skill-texts js-skill-texts">
                   <div class="skills__skill-text">
                     WEB&nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet,
@@ -398,7 +425,7 @@
                 </div>
                 <div
                   class="skills__skill-title js-skill-title"
-                  data-labels="WEB,ANDROID,ML,ETHEREUM"
+                  data-labels="WEB,ANDROID,ML/DL,ETHEREUM"
                 >
                   WEB
                 </div>
