added contacts section & styles

--- a/src/index.html
+++ b/src/index.html
@@ -623,7 +623,72 @@
       <section
         id="section-connect"
         class="full-page__section js-full-page-section"
-      ></section>
+      >
+        <div class="text-appear text-appear--text-connect js-text-connect">
+          <div class="text-appear__line-top js-line-top"></div>
+          <div class="text-appear__text js-text">
+            Let's build something interesting...
+          </div>
+          <div class="text-appear__line-bottom js-line-bottom"></div>
+        </div>
+
+        <div class="contact">
+          <div class="contact__desc">
+            <img
+              class="contact__email-icon"
+              src="images/paper-plane.svg"
+              alt="paper plane"
+            />
+            <a href="mailto:thenvnsahu@gmail.com" class="contact__email"
+              >thenvnsahu<br />&nbsp;@gmail.com</a
+            >
+
+            <div class="contact__text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </div>
+            <div class="contact__sign"></div>
+          </div>
+          <div class="contact__links">
+            <a
+              href="https://twitter.com/heyNvN"
+              target="_blank"
+              class="contact__link"
+            >
+              <img
+                class="contact__link-icon"
+                src="images/twitter.svg"
+                alt="twitter"
+              />
+              <span class="contact__link-handle">/ heyNvN</span>
+            </a>
+            <a
+              href="https://github.com/thenvn"
+              target="_blank"
+              class="contact__link"
+            >
+              <img
+                class="contact__link-icon"
+                src="images/github.svg"
+                alt="github"
+              />
+              <span class="contact__link-handle">/ theNvN</span>
+            </a>
+            <a
+              href="https://codepen.io/thenvn"
+              target="_blank"
+              class="contact__link"
+            >
+              <img
+                class="contact__link-icon"
+                src="images/codepen.svg"
+                alt="codepen"
+              />
+              <span class="contact__link-handle">/ theNvN</span>
+            </a>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
