added in contact section & responsive styles

--- a/src/index.html
+++ b/src/index.html
@@ -633,13 +633,16 @@
         </div>
 
         <div class="contact">
+          <img
+            class="contact__background-icon js-contact-bg-icon"
+            src="images/paper-plane.svg"
+            alt="paper plane"
+          />
+
           <div class="contact__desc">
-            <img
-              class="contact__email-icon"
-              src="images/paper-plane.svg"
-              alt="paper plane"
-            />
-            <a href="mailto:thenvnsahu@gmail.com" class="contact__email"
+            <a
+              href="mailto:thenvnsahu@gmail.com"
+              class="contact__email js-contact-email"
               >thenvnsahu<br />&nbsp;@gmail.com</a
             >
 
@@ -649,11 +652,12 @@
             </div>
             <div class="contact__sign"></div>
           </div>
-          <div class="contact__links">
+          <div class="contact__links js-contact-links">
+            <div class="contact__links-label">// Links</div>
             <a
               href="https://twitter.com/heyNvN"
               target="_blank"
-              class="contact__link"
+              class="contact__link js-link-twitter"
             >
               <img
                 class="contact__link-icon"
@@ -665,7 +669,7 @@
             <a
               href="https://github.com/thenvn"
               target="_blank"
-              class="contact__link"
+              class="contact__link js-link-github"
             >
               <img
                 class="contact__link-icon"
@@ -677,7 +681,7 @@
             <a
               href="https://codepen.io/thenvn"
               target="_blank"
-              class="contact__link"
+              class="contact__link js-link-codepen"
             >
               <img
                 class="contact__link-icon"
