--- a/src/index.html
+++ b/src/index.html
@@ -274,6 +274,8 @@
         </div>
 
         <svg class="low-poly-pic js-low-poly-pic" viewBox="0 0 256 256"></svg>
+
+        <span class="label-me">// That's me</span>
       </section>
 
       <section
