refactored projects section

--- a/src/index.html
+++ b/src/index.html
@@ -484,141 +484,68 @@
         id="section-projects"
         class="full-page__section full-page__section--projects js-full-page-section"
       >
-        <!-- <div class="text-appear text-appear--text-projects js-text-projects">
+        <div class="text-appear text-appear--text-projects js-text-projects">
           <div class="text-appear__line-top js-line-top"></div>
           <div class="text-appear__text js-text">
             A few things that I built...
           </div>
           <div class="text-appear__line-bottom js-line-bottom"></div>
-        </div> -->
-        <!-- 
-        <div class="project-titles">
-          <div class="project-titles__title">Artista</div>
-          <div class="project-titles__title">SnapBot</div>
-          <div class="project-titles__title">GazePointerController</div>
-          <div class="project-titles__title">PeopleCounter</div>
-          <div class="project-titles__title">MyPage</div>
-          <div class="project-titles__title">Philosofy</div>
-          <div class="project-titles__title">EventManagement dApp</div>
-        </div> -->
+        </div>
 
-        <div class="projects js-projects">
-          <div class="project">
-            <div class="project__title">SnapBot</div>
-
-            <div class="project__desc">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit
+        <div class="project js-projects">
+          <div class="project__list-wrapper js-project-list-wrapper">
+            <div class="project__list-item-pos js-list-item-pos"></div>
+            <div class="cursor js-cursor-projects hide">
+              <img
+                class="cursor__arrow cursor__arrow--up"
+                src="images/arrow-up.svg"
+                alt="arrow up"
+              />
+              <img
+                class="cursor__arrow cursor__arrow--down"
+                src="images/arrow-down.svg"
+                alt="arrow down"
+              />
             </div>
-            <div class="project__icon"></div>
+
+            <ul class="project__list js-project-list">
+              <li class="project__title" data-key="0">Artista</li>
+              <li class="project__title" data-key="1">SnapBot</li>
+              <li class="project__title" data-key="2">
+                Gaze Pointer Controller
+              </li>
+              <li class="project__title" data-key="3">PeopleCounter</li>
+              <li class="project__title" data-key="4">MyPage</li>
+              <li class="project__title" data-key="5">Philosofy</li>
+              <li class="project__title" data-key="6">EventManagement dApp</li>
+            </ul>
+          </div>
+
+          <div class="project__desc">
+            <div class="project__name">EventManagement dApp</div>
+            <div class="project__about">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </div>
             <div class="project__tools">
               <div class="project__tools-label">// Built with</div>
-              <div class="project__tools-list">Node.js / Heroku</div>
+              <ul class="project__tools-list">
+                <li class="project__tool">Node.js</li>
+                <li class="project__tool">Heroku</li>
+              </ul>
             </div>
             <div class="project__links">
               <div class="project__links-label">// Links</div>
-              <div class="project__links-list">Github / Twitter</div>
+              <ul class="project__links-list">
+                <li class="project__link">
+                  <a href="" target="__blank">Github</a>
+                </li>
+                <li class="project__link">
+                  <a href="" target="__blank">Twitter</a>
+                </li>
+              </ul>
             </div>
           </div>
-
-          <div class="project">
-            <div class="project__title">SnapBot</div>
-            <div class="project__details">
-              <div class="project__desc">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit
-              </div>
-              <div class="project__icon"></div>
-              <div class="project__tools">
-                <div class="project__tools-label">// Built with</div>
-                <div class="project__tools-list">Node.js / Heroku</div>
-              </div>
-              <div class="project__links">
-                <div class="project__links-label">// Links</div>
-                <div class="project__links-list">Github / Twitter</div>
-              </div>
-            </div>
-          </div>
-
-          <div class="project">
-            <div class="project__title">SnapBot</div>
-            <div class="project__details">
-              <div class="project__desc">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit
-              </div>
-              <div class="project__icon"></div>
-              <div class="project__tools">
-                <div class="project__tools-label">// Built with</div>
-                <div class="project__tools-list">Node.js / Heroku</div>
-              </div>
-              <div class="project__links">
-                <div class="project__links-label">// Links</div>
-                <div class="project__links-list">Github / Twitter</div>
-              </div>
-            </div>
-          </div>
-
-          <div class="project">
-            <div class="project__title">SnapBot</div>
-            <div class="project__details">
-              <div class="project__desc">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit
-              </div>
-              <div class="project__icon"></div>
-              <div class="project__tools">
-                <div class="project__tools-label">// Built with</div>
-                <div class="project__tools-list">Node.js / Heroku</div>
-              </div>
-              <div class="project__links">
-                <div class="project__links-label">// Links</div>
-                <div class="project__links-list">Github / Twitter</div>
-              </div>
-            </div>
-          </div>
-
-          <div class="project">
-            <div class="project__title">SnapBot</div>
-            <div class="project__details">
-              <div class="project__desc">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit
-              </div>
-              <div class="project__icon"></div>
-              <div class="project__tools">
-                <div class="project__tools-label">// Built with</div>
-                <div class="project__tools-list">Node.js / Heroku</div>
-              </div>
-              <div class="project__links">
-                <div class="project__links-label">// Links</div>
-                <div class="project__links-list">Github / Twitter</div>
-              </div>
-            </div>
-          </div>
-
-          <div class="project">
-            <div class="project__title">SnapBot</div>
-            <div class="project__details">
-              <div class="project__desc">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit
-              </div>
-              <div class="project__icon"></div>
-              <div class="project__tools">
-                <div class="project__tools-label">// Built with</div>
-                <div class="project__tools-list">Node.js / Heroku</div>
-              </div>
-              <div class="project__links">
-                <div class="project__links-label">// Links</div>
-                <div class="project__links-list">Github / Twitter</div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="scroll-progress">
-          <input
-            class="scroll-progress__bar js-scroll-progress-bar"
-            type="range"
-            min="0"
-            max="100"
-            value="0"
-          />
         </div>
       </section>
 
